Fix WTF::makeUnique for arrays

base::makeUnique and std::make_unique support allocating arrays with the
syntax base::makeUnique<char[]>(20).

WTF::makeUnique calls WTF::IsGarbageCollectedType<T> to make sure it
isn't attempting to makeUnique on a GC type. But that requires T be a
complete type, and char[] isn't.

R=esprehn@chromium.org
BUG=706715

Review-Url: https://codereview.chromium.org/2790463002
Cr-Commit-Position: refs/heads/master@{#460850}

Former-commit-id: 54702b16778aa3319f93a32d3ffdc4aef1c9a831